Added version log markup, server api and React component to show all published versions and open work contexts, if searched for